--- a/sse-test/test.html
+++ b/sse-test/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>SSE Stream Test</title>
+    <title>SSE Face Log Test</title>
   </head>
   <body>
     <h1>Face Log Upload + SSE Test</h1>
@@ -12,10 +12,20 @@
 
     <pre id="output"></pre>
 
-    <script>
-      const token = "";
+    <!-- CDN for fetch-event-source -->
+    <script type="module">
+      import {
+        fetchEventSource,
+        EventStreamContentType,
+      } from "https://cdn.skypack.dev/@microsoft/fetch-event-source";
 
+      const token = ""; // auth tokens
       let formData = null;
+      let sseReady = false;
+      let controller = null;
+
+      class RetriableError extends Error {}
+      class FatalError extends Error {}
 
       async function startSSE() {
         const fileInput = document.getElementById("imageInput");
@@ -28,84 +38,105 @@
 
         formData = new FormData();
         formData.append("image", file);
+        sseReady = false;
+        controller = new AbortController();
+
+        log("🔌 Connecting to SSE...");
 
         try {
-          // stream subscribe url
-          const streamResponse = await fetch("", {
+          await fetchEventSource("" // open stream, {
             method: "GET",
             headers: {
-              Authorization: "Bearer " + token,
+              Authorization: `Bearer ${token}`,
+            },
+            signal: controller.signal,
+            async onopen(response) {
+              if (
+                response.ok &&
+                response.headers
+                  .get("content-type")
+                  ?.includes(EventStreamContentType)
+              ) {
+                log("✅ SSE connection opened");
+                return; // all good
+              } else if (
+                response.status >= 400 &&
+                response.status < 500 &&
+                response.status !== 429
+              ) {
+                throw new FatalError("Client error: " + response.status);
+              } else {
+                throw new RetriableError("Server error: " + response.status);
+              }
+            },
+            onmessage(msg) {
+              try {
+                const data = JSON.parse(msg.data);
+                log("📡 Event received:\n" + JSON.stringify(data, null, 2));
+
+                if (data.event === "FatalError") {
+                  throw new FatalError("Server sent fatal error");
+                }
+
+                if (data.code === 200 && data.event === "ready" && !sseReady) {
+                  sseReady = true;
+                  log("🟢 Ready signal received. Uploading image...");
+                  uploadImageFile();
+                }
+
+                if (data.event === "done" || data.final === true) {
+                  log("✅ Final result received. Closing stream.");
+                  controller.abort();
+                }
+              } catch (err) {
+                log("❌ Error parsing SSE message: " + err.message);
+              }
+            },
+            onclose() {
+              log("🔁 Server closed connection. Retrying...");
+              throw new RetriableError();
+            },
+            onerror(err) {
+              if (err instanceof FatalError) {
+                log("❌ Fatal error: " + err.message);
+                throw err; // stop retries
+              }
+              log("⚠️ Retriable error: " + err.message);
+              // Let fetchEventSource retry
             },
           });
-
-          if (!streamResponse.ok || !streamResponse.body) {
-            throw new Error("Failed to connect SSE stream");
-          }
-
-          log("✅ SSE connection opened");
-
-          const reader = streamResponse.body.getReader();
-          const decoder = new TextDecoder("utf-8");
-          let buffer = "";
-          let sseReady = false;
-
-          (async function readStream() {
-            while (true) {
-              const { value, done } = await reader.read();
-              if (done) break;
-
-              buffer += decoder.decode(value, { stream: true });
-
-              let lines = buffer.split("\n");
-              buffer = lines.pop(); // save incomplete line
-
-              for (let line of lines) {
-                if (line.startsWith("data:")) {
-                  try {
-                    const json = JSON.parse(line.slice(5).trim());
-                    log("📡 Event received:\n" + JSON.stringify(json, null, 2));
-
-                    if (json.code === 200 && !sseReady) {
-                      sseReady = true;
-                      log("🔄 SSE ready, now uploading image...");
-                      await uploadImageFile();
-                    }
-                  } catch (e) {
-                    log("❌ Invalid JSON: " + line);
-                  }
-                }
-              }
-            }
-          })();
-        } catch (error) {
-          log("❌ Error: " + error.message);
+        } catch (err) {
+          log("❌ SSE terminated: " + err.message);
         }
       }
 
       async function uploadImageFile() {
         try {
-          // stream input
-          const uploadResponse = await fetch("", {
-            method: "POST",
-            headers: {
-              Authorization: "Bearer " + token,
-            },
-            body: formData,
-          });
+          const response = await fetch("" // start proccess,
+            {
+              method: "POST",
+              headers: {
+                Authorization: `Bearer ${token}`,
+              },
+              body: formData,
+            }
+          );
 
-          if (!uploadResponse.ok) {
-            throw new Error("Upload failed: " + uploadResponse.status);
+          if (!response.ok) {
+            throw new Error("failed: " + response.status);
           }
 
-          log("📤 Image uploaded. Waiting for analysis...");
-        } catch (error) {
-          log("❌ Upload error: " + error.message);
+        } catch (err) {
+          log("❌ error: " + err.message);
         }
       }
 
       function log(message) {
-        document.getElementById("output").textContent += message + "\n";
+        const output = document.getElementById("output");
+        output.textContent += message + "\n";
       }
+
+      window.startSSE = startSSE;
     </script>
   </body>
 </html>
